--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ant-design-vue": "4.x",
+    "axios": "^1.6.0",
     "vue": "^3.3.4",
+    "vue-query": "^1.26.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
