--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "4.x",
     "axios": "^1.6.0",
     "vue": "^3.3.4",
@@ -38,6 +39,7 @@
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "start-server-and-test": "^2.0.1",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
